Updates to AWS code and Figures script

--- a/Aim1/code/Python/AWS/accmeas_by_block.ipynb
+++ b/Aim1/code/Python/AWS/accmeas_by_block.ipynb
@@ -12,7 +12,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Block IDs: ['-116+40', '-116+41', '-117+40', '-117+41', '-117+42', '-117+43', '-117+45', '-117+46', '-117+47', '-118+39', '-118+40', '-118+41', '-118+42', '-118+43', '-118+44', '-118+45', '-118+46', '-118+47', '-119+39', '-119+40', '-119+41', '-119+42', '-119+43', '-119+44', '-119+45', '-119+46', '-119+47', '-120+39', '-120+40', '-120+41', '-120+42', '-120+43', '-120+44', '-120+45', '-120+46', '-121+41', '-121+42', '-121+43', '-121+44', '-122+41', '-122+42', '-122+43']\n",
       "Complete\n"
      ]
     }
@@ -37,26 +36,28 @@
     "\n",
     "proj = 'EPSG:5070'\n",
     "\n",
+    "projdir = '/Users/max/Library/CloudStorage/OneDrive-Personal/mcook/aspen-fire/Aim1/data/spatial/mod/'\n",
+    "\n",
     "rois = ['srme','wrnf']\n",
     "\n",
-    "blocks = gpd.read_file('spatial_block_grid_w_attr.gpkg').to_crs(proj)\n",
-    "block_ids = list(blocks.grid_id)\n",
-    "print(f'Block IDs: {block_ids}')\n",
+    "# blocks = gpd.read_file('spatial_block_grid_w_attr.gpkg').to_crs(proj)\n",
+    "# block_ids = list(blocks.grid_id)\n",
+    "# print(f'Block IDs: {block_ids}')\n",
     "\n",
     "# Target grid (resampled 10-meter map using maximum resampling)\n",
     "tests = [\n",
-    "    's2aspen_prob_10m_binOpt_srme.tif',\n",
-    "    's2aspen_prob_10m_binOpt_wrnf.tif'\n",
+    "    os.path.join(projdir,'results/classification/s2aspen_prob_10m_binOpt_srme.tif'),\n",
+    "    os.path.join(projdir,'results/classification/s2aspen_prob_10m_binOpt_wrnf.tif')\n",
     "]\n",
     "\n",
     "# Reference grids (binary, matched)\n",
     "refs = [\n",
-    "    'lc16_evt_200_bin_srme_10m.tif',\n",
-    "    'lc16_evt_200_bin_wrnf_10m.tif',\n",
-    "    'usfs_treemap16_bin_srme_10m.tif',\n",
-    "    'usfs_treemap16_bin_wrnf_10m.tif',\n",
-    "    'usfs_itsp_aspen_ba_gt10_srme_10m.tif',\n",
-    "    'usfs_itsp_aspen_ba_gt10_wrnf_10m.tif'\n",
+    "    os.path.join(projdir,'reference/lc16_evt_200_bin_srme_10m.tif'),\n",
+    "    os.path.join(projdir,'reference/lc16_evt_200_bin_wrnf_10m.tif'),\n",
+    "    os.path.join(projdir,'reference/usfs_treemap16_balive_int_bin_srme_10m.tif'),\n",
+    "    os.path.join(projdir,'reference/usfs_treemap16_balive_int_bin_wrnf_10m.tif'),\n",
+    "    os.path.join(projdir,'reference/usfs_itsp_aspen_ba_gt10_srme_10m.tif'),\n",
+    "    os.path.join(projdir,'reference/usfs_itsp_aspen_ba_gt10_wrnf_10m.tif')\n",
     "]\n",
     "\n",
     "# Functions\n",
@@ -147,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "5d798693-e476-4acc-b4f9-62cdba96a727",
    "metadata": {
     "tags": []
@@ -157,47 +158,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting for srme\n",
-      "s2aspen_prob_10m_binOpt_srme.tif\n",
-      "['lc16_evt_200_bin_srme_10m.tif', 'usfs_treemap16_bin_srme_10m.tif', 'usfs_itsp_aspen_ba_gt10_srme_10m.tif']\n",
-      "lc16_evt_200_bin_srme_10m.tif\n",
-      "lc16_evt_200_bin_srme_10m\n",
-      "Starting analysis by spatial block unit for the SRME ...\n",
-      "Blocksize 1: Reference - (10680, 8779), Test - (10680, 8779)\n",
+      "Starting for wrnf\n",
+      "s2aspen_prob_10m_binOpt_wrnf.tif\n",
+      "['lc16_evt_200_bin_wrnf_10m.tif', 'usfs_treemap16_balive_int_bin_wrnf_10m.tif', 'usfs_itsp_aspen_ba_gt10_wrnf_10m.tif']\n",
+      "lc16_evt_200_bin_wrnf_10m\n",
+      "No block analysis for WRNF ...\n",
+      "Blocksize 1: Reference - (95434, 64152), Test - (95434, 64152)\n",
       "Creating data frame\n",
-      "1 0 2 468\n",
-      "Blocksize 3: Reference - (3560, 2927), Test - (3560, 2927)\n",
+      "1 12023638 4549761 8149052\n",
+      "Blocksize 3: Reference - (31812, 21384), Test - (31812, 21384)\n",
       "Creating data frame\n",
-      "3 1 1 116\n",
-      "Blocksize 1: Reference - (10676, 8684), Test - (10676, 8684)\n",
+      "3 1688776 1026049 552634\n",
+      "usfs_treemap16_balive_int_bin_wrnf_10m\n",
+      "No block analysis for WRNF ...\n",
+      "Blocksize 1: Reference - (95434, 64152), Test - (95434, 64152)\n",
       "Creating data frame\n",
-      "1 1410 3864 7245\n",
-      "Blocksize 3: Reference - (3559, 2895), Test - (3559, 2895)\n",
+      "1 11926878 4646521 8843961\n",
+      "Blocksize 3: Reference - (31812, 21384), Test - (31812, 21384)\n",
       "Creating data frame\n",
-      "3 399 685 2100\n",
-      "Blocksize 1: Reference - (10746, 8866), Test - (10746, 8866)\n",
+      "3 1678069 1036756 629802\n",
+      "usfs_itsp_aspen_ba_gt10_wrnf_10m\n",
+      "No block analysis for WRNF ...\n",
+      "Blocksize 1: Reference - (95434, 64152), Test - (95434, 64152)\n",
       "Creating data frame\n",
-      "1 780 11475 24072\n",
-      "Blocksize 3: Reference - (3582, 2956), Test - (3582, 2956)\n",
+      "1 12923739 3649660 14298372\n",
+      "Blocksize 3: Reference - (31812, 21384), Test - (31812, 21384)\n",
       "Creating data frame\n",
-      "3 252 3971 4091\n",
-      "Blocksize 1: Reference - (10742, 8772), Test - (10742, 8772)\n",
-      "Creating data frame\n",
-      "1 197538 744135 408055\n",
-      "Blocksize 3: Reference - (3581, 2924), Test - (3581, 2924)\n",
-      "Creating data frame\n",
-      "3 43435 162752 55011\n",
-      "Blocksize 1: Reference - (10735, 8678), Test - (10735, 8678)\n",
-      "Creating data frame\n",
-      "1 63012 105462 128515\n",
-      "Blocksize 3: Reference - (3579, 2893), Test - (3579, 2893)\n",
-      "Creating data frame\n",
-      "3 16341 24598 26216\n"
+      "3 1936332 778493 1088347\n",
+      "Complete!\n",
+      "732.4735758304596\n"
      ]
     }
    ],
    "source": [
     "# Run the workflow for each ROI\n",
+    "\n",
+    "rois = ['wrnf']\n",
     "\n",
     "# Filter runtime warnings (we get a cast warning but it is benign)\n",
     "import warnings\n",
@@ -213,20 +209,18 @@
     "\n",
     "    # List the test/ref images\n",
     "    test_path = [test for test in tests if str(roi)+\".tif\" in test]\n",
-    "    print(test_path[0])\n",
+    "    print(os.path.basename(test_path[0]))\n",
     "    \n",
     "    # Open the test image (Sentinel-based map)\n",
     "    test_img = rxr.open_rasterio(test_path[0], masked=True, cache=False).astype(rasterio.uint8).squeeze()\n",
     "\n",
     "    ref_file_paths = [ref for ref in refs if str(roi)+\"_10m.tif\" in ref]\n",
-    "    print(ref_file_paths)\n",
+    "    print([os.path.basename(ref) for ref in ref_file_paths])\n",
     "\n",
     "    # Loop through reference images\n",
     "    out_refs = []\n",
     "    for ref_tif in ref_file_paths:\n",
     "        \n",
-    "        print(ref_tif)\n",
-    "\n",
     "        ref_img = rxr.open_rasterio(ref_tif, masked=True, cache=False).astype(rasterio.uint8).squeeze()\n",
     "\n",
     "        name = os.path.basename(ref_tif)[:-4]\n",
@@ -307,7 +301,7 @@
     "            print(\"No block analysis for WRNF ...\")\n",
     "            \n",
     "            test_arr = test_img.values\n",
-    "            ref_ar = ref_img.values\n",
+    "            ref_arr = ref_img.values\n",
     "            \n",
     "            del ref_img\n",
     "\n",
@@ -320,9 +314,6 @@
     "                else:\n",
     "                    arr_ref_res = ref_arr\n",
     "                    arr_test_res = test_arr\n",
-    "\n",
-    "                # Free up some space\n",
-    "                del ref_arr\n",
     "\n",
     "                # Print the shapes for debugging\n",
     "                print(\n",
