--- a/Aim1/code/Python/AWS/global_accmeas-aws.ipynb
+++ b/Aim1/code/Python/AWS/global_accmeas-aws.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "4d66c723-0e1d-4415-a3c7-5f7632fb01f9",
    "metadata": {
     "tags": []
@@ -82,8 +82,8 @@
     "\n",
     "def calc_accmeas(df):\n",
     "    \n",
-    "    df['precision'] = df.tp / (df.tp + df.fp).astype(np.float64)\n",
-    "    df['recall'] = df.tp / (df.tp + df.fn).astype(np.float64)\n",
+    "    df['precision'] = df.tp / (df.tp + df.fp)\n",
+    "    df['recall'] = df.tp / (df.tp + df.fn)\n",
     "    df['fi'] = 2 * (df.precision * df.recall) / (df.precision + df.recall)\n",
     "    \n",
     "    return df\n",
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "228becb4-8335-4f96-904f-cf3dda52cfc7",
    "metadata": {
     "tags": []
@@ -103,15 +103,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(95434, 64152)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_6818/1825922036.py:3: RuntimeWarning: invalid value encountered in cast\n",
-      "  blocks_arr = rxr.open_rasterio(blocks_img_path,masked=True,cache=False).squeeze().values.astype(np.uint16)\n"
+      "(84173, 49016)\n"
      ]
     }
    ],
@@ -201,17 +193,17 @@
      "output_type": "stream",
      "text": [
       "Starting for srme\n",
-      "s2aspen_prob_10m_binOpt_srme.tif\n",
-      "['lc16_evt_200_bin_srme_10m.tif', 'usfs_treemap16_balive_int_bin_srme_10m.tif', 'usfs_itsp_aspen_ba_gt10_srme_10m.tif']\n",
-      "lc16_evt_200_bin_srme_10m\n",
-      "usfs_treemap16_balive_int_bin_srme_10m\n"
+      "Starting for wrnf\n",
+      "s2aspen_prob_10m_binOpt_wrnf.tif\n",
+      "['lc16_evt_200_bin_wrnf_10m.tif', 'usfs_treemap16_balive_int_bin_wrnf_10m.tif', 'usfs_itsp_aspen_ba_gt10_wrnf_10m.tif']\n",
+      "lc16_evt_200_bin_wrnf_10m\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_6818/1492467374.py:38: RuntimeWarning: invalid value encountered in cast\n",
+      "/tmp/ipykernel_436/252249759.py:40: RuntimeWarning: invalid value encountered in cast\n",
       "  ref_arr = ref_img.values.astype(np.uint16)\n"
      ]
     },
@@ -219,7 +211,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Blocksize 1: Reference - (95434, 64152), Test - (95434, 64152), Blocks - (95434, 64152)\n",
+      "Blocksize 1:  Reference - (95434, 64152), Test - (95434, 64152), \n",
+      "Creating data frame ...\n",
+      "Blocksize 3:  Reference - (31812, 21384), Test - (31812, 21384), \n",
+      "Creating data frame ...\n",
+      "usfs_treemap16_balive_int_bin_wrnf_10m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_436/252249759.py:40: RuntimeWarning: invalid value encountered in cast\n",
+      "  ref_arr = ref_img.values.astype(np.uint16)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Blocksize 1:  Reference - (95434, 64152), Test - (95434, 64152), \n",
+      "Creating data frame ...\n",
+      "Blocksize 3:  Reference - (31812, 21384), Test - (31812, 21384), \n",
+      "Creating data frame ...\n",
+      "usfs_itsp_aspen_ba_gt10_wrnf_10m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_436/252249759.py:40: RuntimeWarning: invalid value encountered in cast\n",
+      "  ref_arr = ref_img.values.astype(np.uint16)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Blocksize 1:  Reference - (95434, 64152), Test - (95434, 64152), \n",
       "Creating data frame ...\n"
      ]
     }
@@ -233,129 +263,140 @@
     "for roi in rois:\n",
     "\n",
     "    print(f\"Starting for {roi}\")\n",
-    "\n",
-    "    # Load the test image paths for the region\n",
-    "    test_path = [test for test in tests if str(roi) + \".tif\" in test][0]\n",
-    "    print(test_path)\n",
-    "    # Load the reference image paths\n",
-    "    ref_paths = [ref for ref in refs if str(roi) + \"_10m.tif\" in ref]\n",
-    "    print(ref_paths)\n",
-    "\n",
-    "    # Open the Sentinel-based map\n",
-    "    test_img = rxr.open_rasterio(test_path,masked=True,cache=False).squeeze().fillna(0)\n",
-    "    test_arr = test_img.values.astype(np.uint16)\n",
-    "\n",
-    "    del test_img  # clear up space\n",
-    "\n",
-    "    # Loop through reference images\n",
-    "    out_refs = []\n",
-    "    for ref_tif in ref_paths:\n",
-    "        \n",
-    "        name = os.path.basename(ref_tif)[:-4]  # name of the reference dataset\n",
-    "        print(name)\n",
-    "\n",
-    "        if not os.path.exists(f'global_accmeas_multi_blocks_{name}.csv'):\n",
-    "        \n",
-    "            # Open the reference image\n",
-    "            ref_img = rxr.open_rasterio(ref_tif, masked=True, cache=False).squeeze()\n",
-    "\n",
-    "            blocksizes = [1, 3]  # block sizes (in pixel) used as analytical units.\n",
-    "\n",
-    "            # Convert to arrays\n",
-    "            ref_arr = ref_img.values.astype(np.uint16)\n",
-    "\n",
-    "            del ref_img  # clean up\n",
-    "\n",
-    "            # Check what region (if Southern Rockies, include Block_ID)\n",
-    "            outdata = []\n",
-    "            for blocksize in blocksizes:\n",
-    "                if blocksize > 1:\n",
-    "                    arr_ref_res = blockmax(ref_arr, blocksize)\n",
-    "                    arr_test_res = blockmax(test_arr, blocksize)\n",
-    "                    arr_block_res = blockmax(blocks_arr, blocksize)\n",
-    "                else:\n",
-    "                    arr_ref_res = ref_arr\n",
-    "                    arr_test_res = test_arr\n",
-    "                    arr_block_res = blocks_arr\n",
-    "\n",
-    "                # Print the shapes for debugging\n",
-    "                print(\n",
-    "                    f\"Blocksize {blocksize}: \"\n",
-    "                    f\"Reference - {arr_ref_res.shape}, \"\n",
-    "                    f\"Test - {arr_test_res.shape}, \"\n",
-    "                    f\"Blocks - {arr_block_res.shape}\")\n",
-    "\n",
-    "                # Check if the reshaped arrays have the same shape\n",
-    "                if arr_ref_res.shape != arr_test_res.shape:\n",
-    "                    raise ValueError(\n",
-    "                        f\"Reference and test arrays have different shapes: \"\n",
-    "                        f\"{arr_ref_res.shape} vs {arr_test_res.shape}\")\n",
-    "\n",
-    "                print(\"Creating data frame ...\")\n",
-    "\n",
-    "                if roi == 'srme':\n",
-    "                    currdf = pd.DataFrame({\n",
-    "                        'block': arr_block_res.flatten(),  # if SRME, add the blocks\n",
-    "                        'ref': arr_ref_res.flatten(),\n",
-    "                        'test': arr_test_res.flatten()\n",
-    "                    }).query('ref != 0 or test != 0')\n",
-    "\n",
-    "                    del arr_ref_res, arr_test_res, arr_block_res\n",
-    "\n",
-    "                    # Calculate confusion matrix by Block_ID\n",
-    "                    currdf = currdf.groupby('block').apply(lambda x: pd.Series({\n",
-    "                        'tp': ((x['ref'] == 1) & (x['test'] == 1)).sum(),\n",
-    "                        'fp': ((x['ref'] == 0) & (x['test'] == 1)).sum(),\n",
-    "                        'fn': ((x['ref'] == 1) & (x['test'] == 0)).sum()\n",
-    "                    })).reset_index()\n",
-    "\n",
-    "                    currdf['blocksize'] = blocksize\n",
-    "                    outdata.append(currdf)\n",
-    "\n",
-    "                    del currdf\n",
-    "\n",
-    "                else:\n",
-    "                    currdf = pd.DataFrame({\n",
-    "                        'ref': arr_ref_res.flatten(),\n",
-    "                        'test': arr_test_res.flatten()\n",
-    "                    }).query('ref != 0 or test != 0')\n",
-    "\n",
-    "                    del arr_ref_res, arr_test_res\n",
-    "\n",
-    "                    # Calculate tp, fp, fn directly\n",
-    "                    tp = (currdf['ref'] == 1) & (currdf['test'] == 1).sum()\n",
-    "                    fp = (currdf['ref'] == 0) & (currdf['test'] == 1).sum()\n",
-    "                    fn = (currdf['ref'] == 1) & (currdf['test'] == 0).sum()\n",
-    "\n",
-    "                    # Create a new DataFrame to store these values\n",
-    "                    currdf = pd.DataFrame([{\n",
-    "                        'tp': tp,\n",
-    "                        'fp': fp,\n",
-    "                        'fn': fn,\n",
-    "                        'blocksize': blocksize\n",
-    "                    }])\n",
-    "\n",
-    "                    outdata.append(currdf)\n",
-    "\n",
-    "                    del currdf, tp, fp, fn\n",
-    "\n",
-    "            outdatadf = pd.concat(outdata)\n",
-    "            outdatadf = calc_accmeas(outdatadf)\n",
-    "            outdatadf['source'] = name\n",
-    "\n",
-    "            # Save the results to a CSV\n",
-    "            outdatadf.to_csv(f'global_accmeas_multi_blocks_{name}.csv', index=False)\n",
-    "            out_refs.append(outdatadf)\n",
-    "\n",
-    "            del outdata, outdatadf\n",
     "    \n",
-    "    del test_arr, ref_arr\n",
-    "    \n",
-    "    # Bind the results together for plotting\n",
-    "    outdfs = pd.concat(out_refs).reset_index(drop=True)\n",
-    "    outdfs.to_csv(f'global_accmeas_multi_blocks_full_{roi}.csv', index=False)\n",
+    "    if not os.path.exists(f'global_accmeas_multi_blocks_full_{roi}.csv'):\n",
     "\n",
-    "    del outdfs\n",
+    "        # Load the test image paths for the region\n",
+    "        test_path = [test for test in tests if str(roi) + \".tif\" in test][0]\n",
+    "        print(test_path)\n",
+    "        # Load the reference image paths\n",
+    "        ref_paths = [ref for ref in refs if str(roi) + \"_10m.tif\" in ref]\n",
+    "        print(ref_paths)\n",
+    "\n",
+    "        # Open the Sentinel-based map\n",
+    "        test_img = rxr.open_rasterio(test_path,masked=True,cache=False).squeeze().fillna(0)\n",
+    "        test_arr = test_img.values.astype(np.uint16)\n",
+    "\n",
+    "        del test_img  # clear up space\n",
+    "\n",
+    "        # Loop through reference images\n",
+    "        out_refs = []\n",
+    "        for ref_tif in ref_paths:\n",
+    "\n",
+    "            name = os.path.basename(ref_tif)[:-4]  # name of the reference dataset\n",
+    "            print(name)\n",
+    "\n",
+    "            if not os.path.exists(f'global_accmeas_multi_blocks_{name}.csv'):\n",
+    "\n",
+    "                # Open the reference image\n",
+    "                ref_img = rxr.open_rasterio(ref_tif, masked=True, cache=False).squeeze()\n",
+    "\n",
+    "                blocksizes = [1, 3]  # block sizes (in pixel) used as analytical units.\n",
+    "\n",
+    "                # Convert to arrays\n",
+    "                ref_arr = ref_img.values.astype(np.uint16)\n",
+    "\n",
+    "                del ref_img  # clean up\n",
+    "\n",
+    "                outdata = []\n",
+    "                for blocksize in blocksizes:\n",
+    "                    if blocksize > 1:\n",
+    "                        arr_ref_res = blockmax(ref_arr, blocksize)\n",
+    "                        arr_test_res = blockmax(test_arr, blocksize)\n",
+    "                    else:\n",
+    "                        arr_ref_res = ref_arr\n",
+    "                        arr_test_res = test_arr\n",
+    "\n",
+    "                    # Print the shapes for debugging\n",
+    "                    print(\n",
+    "                        f\"Blocksize {blocksize}: \",\n",
+    "                        f\"Reference - {arr_ref_res.shape}, \"\n",
+    "                        f\"Test - {arr_test_res.shape}, \")\n",
+    "\n",
+    "                    # Check if the reshaped arrays have the same shape\n",
+    "                    if arr_ref_res.shape != arr_test_res.shape:\n",
+    "                        raise ValueError(\n",
+    "                            f\"Reference and test arrays have different shapes: \"\n",
+    "                            f\"{arr_ref_res.shape} vs {arr_test_res.shape}\")\n",
+    "\n",
+    "                    print(\"Creating data frame ...\")\n",
+    "\n",
+    "                    if roi == 'srme':\n",
+    "\n",
+    "                        if blocksize > 1:\n",
+    "                            arr_block_res = blockmax(blocks_arr, blocksize)\n",
+    "                        else:\n",
+    "                            arr_block_res = blocks_arr\n",
+    "\n",
+    "                        print(f\"Blocks - {arr_block_res.shape}\")\n",
+    "\n",
+    "                        currdf = pd.DataFrame({\n",
+    "                            'block': arr_block_res.flatten(),  # if SRME, add the blocks\n",
+    "                            'ref': arr_ref_res.flatten(),\n",
+    "                            'test': arr_test_res.flatten()\n",
+    "                        }).query('ref != 0 or test != 0')\n",
+    "\n",
+    "                        del arr_ref_res, arr_test_res, arr_block_res\n",
+    "\n",
+    "                        # Calculate confusion matrix by Block_ID\n",
+    "                        currdf = currdf.groupby('block').apply(lambda x: pd.Series({\n",
+    "                            'tp': ((x['ref'] == 1) & (x['test'] == 1)).sum(),\n",
+    "                            'fp': ((x['ref'] == 0) & (x['test'] == 1)).sum(),\n",
+    "                            'fn': ((x['ref'] == 1) & (x['test'] == 0)).sum()\n",
+    "                        })).reset_index()\n",
+    "\n",
+    "                        currdf['blocksize'] = blocksize\n",
+    "                        outdata.append(currdf)\n",
+    "\n",
+    "                        del currdf\n",
+    "\n",
+    "                    else:\n",
+    "                        currdf = pd.DataFrame({\n",
+    "                            'ref': arr_ref_res.flatten(),\n",
+    "                            'test': arr_test_res.flatten()\n",
+    "                        }).query('ref != 0 or test != 0')\n",
+    "\n",
+    "                        del arr_ref_res, arr_test_res\n",
+    "\n",
+    "                        # Calculate tp, fp, fn directly\n",
+    "                        tp = (currdf['ref'] == 1) & (currdf['test'] == 1).sum()\n",
+    "                        fp = (currdf['ref'] == 0) & (currdf['test'] == 1).sum()\n",
+    "                        fn = (currdf['ref'] == 1) & (currdf['test'] == 0).sum()\n",
+    "\n",
+    "                        # Create a new DataFrame to store these values\n",
+    "                        currdf = pd.DataFrame([{\n",
+    "                            'tp': tp,\n",
+    "                            'fp': fp,\n",
+    "                            'fn': fn,\n",
+    "                            'blocksize': blocksize\n",
+    "                        }])\n",
+    "                        \n",
+    "                        # # Calculate the accuracy metrics\n",
+    "                        # currdf['precision'] = currdf.tp / (currdf.tp + currdf.fp)\n",
+    "                        # currdf['recall'] = currdf.tp / (currdf.tp + currdf.fn)\n",
+    "                        # currdf['f1'] = 2 * (currdf.precision * currdf.recall) / (currdf.precision + currdf.recall)\n",
+    "\n",
+    "                        outdata.append(currdf)\n",
+    "\n",
+    "                        del currdf, tp, fp, fn\n",
+    "\n",
+    "                outdatadf = pd.concat(outdata)\n",
+    "                # outdatadf = calc_accmeas(outdatadf)\n",
+    "                outdatadf['source'] = name\n",
+    "\n",
+    "                # Save the results to a CSV\n",
+    "                outdatadf.to_csv(f'global_accmeas_multi_blocks_{name}.csv', index=False)\n",
+    "                out_refs.append(outdatadf)\n",
+    "\n",
+    "                del outdata, outdatadf\n",
+    "\n",
+    "        del test_arr, ref_arr\n",
+    "\n",
+    "        # Bind the results together for plotting\n",
+    "        outdfs = pd.concat(out_refs).reset_index(drop=True)\n",
+    "        outdfs.to_csv(f'global_accmeas_multi_blocks_full_{roi}.csv', index=False)\n",
+    "\n",
+    "        del outdfs\n",
     "\n",
     "print(\"Complete!\")\n",
     "\n",
