--- a/Aim1/code/Python/AWS/global_accmeas.ipynb
+++ b/Aim1/code/Python/AWS/global_accmeas.ipynb
@@ -12,16 +12,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(95434, 64152)\n",
       "Complete\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/lm/1zg27k9x385csjv9gkj8jqm80000gp/T/ipykernel_7230/1445664211.py:43: RuntimeWarning: invalid value encountered in cast\n",
-      "  blocks_arr = rxr.open_rasterio(blocks_img_path,masked=True,cache=False).squeeze().values.astype(np.uint16)\n"
      ]
     }
    ],
@@ -66,10 +57,10 @@
     "    os.path.join(projdir,'reference/usfs_itsp_aspen_ba_gt10_wrnf_10m.tif')\n",
     "]\n",
     "\n",
-    "# Load the rasterized spatial grid\n",
-    "blocks_img_path = os.path.join(projdir,'reference/spatial_block_grid_50km2_match.tif')\n",
-    "blocks_arr = rxr.open_rasterio(blocks_img_path,masked=True,cache=False).squeeze().values.astype(np.uint16)\n",
-    "print(blocks_arr.shape)\n",
+    "# # Load the rasterized spatial grid\n",
+    "# blocks_img_path = os.path.join(projdir,'reference/spatial_block_grid_50km2_match.tif')\n",
+    "# blocks_arr = rxr.open_rasterio(blocks_img_path,masked=True,cache=False).squeeze().values.astype(np.uint16)\n",
+    "# print(blocks_arr.shape)\n",
     "\n",
     "\n",
     "#############\n",
@@ -142,61 +133,61 @@
     }
    ],
    "source": [
-    "#####################################\n",
-    "# Confirm raster grids are matching #\n",
-    "#####################################\n",
+    "# #####################################\n",
+    "# # Confirm raster grids are matching #\n",
+    "# #####################################\n",
     "\n",
-    "# Loop through ROIs\n",
-    "for i in range(len(rois)):\n",
-    "    roi = rois[i]\n",
+    "# # Loop through ROIs\n",
+    "# for i in range(len(rois)):\n",
+    "#     roi = rois[i]\n",
     "\n",
-    "    test_file_paths = [test for test in tests if str(roi) + \".tif\" in test]\n",
-    "    print(os.path.basename(test_file_paths[0]))\n",
-    "    test = rxr.open_rasterio(test_file_paths[0], cache=False).squeeze().fillna(0)\n",
+    "#     test_file_paths = [test for test in tests if str(roi) + \".tif\" in test]\n",
+    "#     print(os.path.basename(test_file_paths[0]))\n",
+    "#     test = rxr.open_rasterio(test_file_paths[0], cache=False).squeeze().fillna(0)\n",
     "\n",
-    "    ref_file_paths = [ref for ref in refs if str(roi) + \"_10m.tif\" in ref]\n",
-    "    ref_file_paths.append(blocks_img_path)\n",
-    "    print([os.path.basename(ref) for ref in ref_file_paths])\n",
+    "#     ref_file_paths = [ref for ref in refs if str(roi) + \"_10m.tif\" in ref]\n",
+    "#     ref_file_paths.append(blocks_img_path)\n",
+    "#     print([os.path.basename(ref) for ref in ref_file_paths])\n",
     "\n",
-    "    # Check that they match with the aspen surfaces\n",
-    "    for ref in ref_file_paths:\n",
-    "        print(os.path.basename(ref))\n",
+    "#     # Check that they match with the aspen surfaces\n",
+    "#     for ref in ref_file_paths:\n",
+    "#         print(os.path.basename(ref))\n",
     "\n",
-    "        ref_ = rxr.open_rasterio(ref, cache=False).squeeze()\n",
+    "#         ref_ = rxr.open_rasterio(ref, cache=False).squeeze()\n",
     "\n",
-    "        if test.rio.resolution() == ref_.rio.resolution() and \\\n",
-    "                test.rio.bounds() == ref_.rio.bounds() and \\\n",
-    "                test.shape == ref_.shape:\n",
+    "#         if test.rio.resolution() == ref_.rio.resolution() and \\\n",
+    "#                 test.rio.bounds() == ref_.rio.bounds() and \\\n",
+    "#                 test.shape == ref_.shape:\n",
     "\n",
-    "            print(\"Ref and Test match ...\")\n",
+    "#             print(\"Ref and Test match ...\")\n",
     "\n",
-    "            del ref_\n",
+    "#             del ref_\n",
     "\n",
-    "        else:\n",
-    "            print(\"Mismatch between ref and test ...\")\n",
-    "            print(f\"Shape of test: {test.shape}\\nBounds of ref: {ref_.shape}\")\n",
-    "            print(f\"Resolution of test: {test.rio.resolution()}\\nResolution of ref: {ref_.rio.resolution()}\")\n",
-    "            print(f\"Bounds of test: {test.rio.bounds()}\\nBounds of ref: {ref_.rio.bounds()}\")\n",
+    "#         else:\n",
+    "#             print(\"Mismatch between ref and test ...\")\n",
+    "#             print(f\"Shape of test: {test.shape}\\nBounds of ref: {ref_.shape}\")\n",
+    "#             print(f\"Resolution of test: {test.rio.resolution()}\\nResolution of ref: {ref_.rio.resolution()}\")\n",
+    "#             print(f\"Bounds of test: {test.rio.bounds()}\\nBounds of ref: {ref_.rio.bounds()}\")\n",
     "\n",
-    "            del ref_\n",
+    "#             del ref_\n",
     "\n",
-    "            print(f\"Matching reference image to test image for {os.path.basename(ref)}\")\n",
-    "            img = rxr.open_rasterio(ref,masked=True,cache=False).squeeze()\n",
-    "            img = img.fillna(0).astype(np.uint16)\n",
-    "            img_match = img.rio.reproject_match(test)\n",
-    "            out_path = ref[:-4]+\".tif\"\n",
-    "            print(out_path)\n",
-    "            img_match.rio.to_raster(\n",
-    "                out_path, tiled=True, lock=threading.Lock(), windowed=True,\n",
-    "                compress='zstd', zstd_level=9, num_threads='all_cpus',\n",
-    "                dtype='uint16', driver='GTiff'\n",
-    "            )\n",
+    "#             print(f\"Matching reference image to test image for {os.path.basename(ref)}\")\n",
+    "#             img = rxr.open_rasterio(ref,masked=True,cache=False).squeeze()\n",
+    "#             img = img.fillna(0).astype(np.uint16)\n",
+    "#             img_match = img.rio.reproject_match(test)\n",
+    "#             out_path = ref[:-4]+\".tif\"\n",
+    "#             print(out_path)\n",
+    "#             img_match.rio.to_raster(\n",
+    "#                 out_path, tiled=True, lock=threading.Lock(), windowed=True,\n",
+    "#                 compress='zstd', zstd_level=9, num_threads='all_cpus',\n",
+    "#                 dtype='uint16', driver='GTiff'\n",
+    "#             )\n",
     "\n",
-    "            del img, img_match\n",
+    "#             del img, img_match\n",
     "\n",
-    "        del ref\n",
+    "#         del ref\n",
     "\n",
-    "    del test"
+    "#     del test"
    ]
   },
   {
@@ -222,6 +213,8 @@
     "################################################\n",
     "# Workflow to calculate the confusion matrices #\n",
     "################################################\n",
+    "\n",
+    "rois = ['wrnf']\n",
     "\n",
     "# Loop regions, perform the analysis\n",
     "for roi in rois:\n",
@@ -263,7 +256,7 @@
     "            if blocksize > 1:\n",
     "                arr_ref_res = blockmax(ref_arr, blocksize)\n",
     "                arr_test_res = blockmax(test_arr, blocksize)\n",
-    "                arr_block_res = blockmax(blocks_arr, blocksize)\n",
+    "                # arr_block_res = blockmax(blocks_arr, blocksize)\n",
     "            else:\n",
     "                arr_ref_res = ref_arr\n",
     "                arr_test_res = test_arr\n",
